--- a/Task II - Personal Portfolio/style.css
+++ b/Task II - Personal Portfolio/style.css
@@ -33,10 +33,6 @@ header {
   font-size: 16px;
 }
 
-.about h2 {
-  font-size: 40px;
-}
-
 .projects-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
@@ -59,4 +55,18 @@ footer {
 
   width: 100%;
   text-align: center;
+
+  margin-top: 100px;
+}
+
+.contact-images--container {
+  display: flex;
+  align-items: flex-start;
+  column-gap: 10px;
+  padding-left: 20px;
+}
+
+.contact-images--container img {
+  width: 50px;
+  border-radius: 10px;
 }
