:wrench: Re-added the main index.html

--- a/Task II - Personal Portfolio/style.css
+++ b/Task II - Personal Portfolio/style.css
@@ -35,7 +35,8 @@ header {
 
 .projects-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  /* grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); */
 }
 
 .project {
