--- a/Task II - Personal Portfolio/style.css
+++ b/Task II - Personal Portfolio/style.css
@@ -1,16 +1,11 @@
+html {
+  scroll-behavior: smooth;
+}
+
 h1,
 body {
   margin: 0;
   font-family: sans-serif;
-}
-
-main {
-  padding: 15px;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
 }
 
 header {
@@ -20,8 +15,35 @@ header {
   justify-content: center;
   align-items: center;
   row-gap: 0px;
-  background-color: rgb(39, 180, 105);
+  background-color: darkcyan;
   color: white;
+}
+
+main {
+  padding: 15px;
+}
+
+footer {
+  position: absolute;
+  display: block;
+
+  background-color: darkcyan;
+  color: white;
+
+  width: 100%;
+  text-align: center;
+  font-size: 15px;
+  margin-top: 100px;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+a:hover {
+  text-decoration: underline 1px;
+  text-underline-offset: 5px;
+  color: lightgrey;
 }
 
 .nav-links {
@@ -35,29 +57,15 @@ header {
 
 .projects-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  /* grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); */
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
 .project {
   place-self: center;
-}
-
-body {
-  position: relative;
-}
-
-footer {
-  position: absolute;
-  display: block;
-
-  background-color: black;
-  color: white;
-
-  width: 100%;
+  display: flex;
+  flex-direction: column;
   text-align: center;
-
-  margin-top: 100px;
+  justify-content: center;
 }
 
 .contact-images--container {
@@ -70,4 +78,76 @@ footer {
 .contact-images--container img {
   width: 50px;
   border-radius: 10px;
+}
+
+/*  480px optimizations */
+@media (max-width: 480px) {
+  h1 {
+    font-size: 20px;
+  }
+
+  h2 {
+    font-size: 18px;
+  }
+
+  h3 {
+    font-size: 15px;
+  }
+
+  p {
+    font-size: 14px;
+  }
+  .nav-links {
+    flex-direction: column;
+    row-gap: 10px;
+
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  .nav-links a {
+    font-size: 12px;
+  }
+  .contact-images--container img {
+    width: 32px;
+  }
+  .projects-grid img {
+    width: 100px;
+  }
+}
+
+/*  768px optimizations */
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 25px;
+  }
+
+  h2 {
+    font-size: 23px;
+  }
+
+  h3 {
+    font-size: 20px;
+  }
+
+  p {
+    font-size: 15px;
+  }
+  .nav-links {
+    flex-direction: column;
+    row-gap: 13px;
+
+    margin-top: 10px;
+    margin-bottom: 8px;
+  }
+
+  .nav-links a {
+    font-size: 13px;
+  }
+  .contact-images--container img {
+    width: 40px;
+  }
+  .projects-grid img {
+    width: 115px;
+  }
 }
