--- a/Task III - Personal Portfolio II/style.css
+++ b/Task III - Personal Portfolio II/style.css
@@ -55,22 +55,21 @@ body {
 
 .intro-block {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column-reverse;
+  justify-content: center;
   height: 100dvh;
   padding-left: 60px;
-  padding-top: 120px;
   padding-right: 50px;
 }
 .intro-block img {
-  width: 500px;
-  border-radius: 1000px;
-  margin-top: 50px;
-  margin-right: 20px;
+  width: 200px;
+  border-radius: 50%;
 }
 .glow-container {
   position: relative;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
   z-index: 0;
 }
 .glowing-image {
@@ -82,31 +81,30 @@ body {
 .introduction {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 .intro-words {
   height: fit-content;
-  font-size: 90px;
-  width: 600px;
-  text-wrap: wrap;
+  font-size: 30px;
+
   color: lightgrey;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   margin-bottom: 0;
 }
 .welcome--intro {
-  font-size: 50px;
-
-  display: block;
+  font-size: 30px;
 }
 .title--intro {
-  font-size: 30px;
+  font-size: 20px;
+  display: block;
 }
 .colored-title--intro {
   color: var(--accent-color);
 }
 .about--intro {
-  font-size: 17px;
-  width: 600px;
+  font-size: 16px;
+
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: var(--secondary-text-color);
@@ -117,11 +115,11 @@ body {
   border: 0;
   border-radius: 26px;
   width: fit-content;
-  padding-left: 40px;
-  padding-right: 40px;
-  height: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 30px;
   margin-top: 40px;
-  font-size: 20px;
+  font-size: 13px;
   font-weight: 600;
   color: var(--background-color);
   cursor: pointer;
@@ -159,6 +157,87 @@ body {
     margin-right: 30px;
     color: lightgray;
     cursor: pointer;
+  }
+  .introduction {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+  }
+  .intro-words {
+    height: fit-content;
+    font-size: 80px;
+    width: 600px;
+    text-wrap: wrap;
+    color: lightgrey;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    margin-bottom: 0;
+  }
+  .welcome--intro {
+    font-size: 50px;
+
+    display: block;
+  }
+  .title--intro {
+    font-size: 30px;
+    display: block;
+  }
+  .colored-title--intro {
+    color: var(--accent-color);
+  }
+  .about--intro {
+    font-size: 20px;
+    width: 600px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
+    color: var(--secondary-text-color);
+    font-weight: 400;
+  }
+  .resume-button--intro {
+    background-color: var(--button-color);
+    border: 0;
+    border-radius: 26px;
+    width: fit-content;
+    padding-left: 40px;
+    padding-right: 40px;
+    height: 50px;
+    margin-top: 40px;
+    font-size: 20px;
+    font-weight: 600;
+    color: var(--background-color);
+    cursor: pointer;
+  }
+
+  .resume-button--intro:hover {
+    background-color: cadetblue;
+    color: var(--secondary-text-color);
+  }
+
+  .intro-block {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 100dvh;
+    padding-left: 60px;
+    padding-top: 120px;
+    padding-right: 50px;
+  }
+  .intro-block img {
+    width: 500px;
+    border-radius: 1000px;
+    margin-top: 50px;
+    margin-right: 20px;
+  }
+  .glow-container {
+    position: relative;
+    display: inline-block;
+    z-index: 0;
+  }
+  .glowing-image {
+    box-shadow: 0 0 20px rgba(0, 255, 255, 0.7),
+      /* Outer glow */ 0 0 50px rgba(0, 255, 255, 0.5),
+      /* Middle glow */ 0 0 100px rgba(0, 255, 255, 0.3); /* Inner glow */
   }
 }
 
