--- a/Task III - Personal Portfolio II/style.css
+++ b/Task III - Personal Portfolio II/style.css
@@ -57,7 +57,8 @@ body {
   display: flex;
   flex-direction: column-reverse;
   justify-content: center;
-  height: 100dvh;
+  height: 90dvh;
+  padding-top: 60px;
   padding-left: 60px;
   padding-right: 50px;
 }
@@ -81,7 +82,7 @@ body {
 .introduction {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: center;
 }
 .intro-words {
   height: fit-content;
@@ -109,6 +110,7 @@ body {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: var(--secondary-text-color);
   font-weight: 400;
+  text-align: center;
 }
 .resume-button--intro {
   background-color: var(--button-color);
@@ -118,7 +120,7 @@ body {
   padding-left: 20px;
   padding-right: 20px;
   height: 30px;
-  margin-top: 40px;
+  margin-top: 20px;
   font-size: 13px;
   font-weight: 600;
   color: var(--background-color);
