--- a/Task III - Personal Portfolio II/introduction.css
+++ b/Task III - Personal Portfolio II/introduction.css
@@ -13,9 +13,7 @@ body {
 .intro,
 .top {
   background-color: var(--background-color);
-  margin-top: 0;
-  margin-right: 0;
-  margin-left: 0;
+  margin: 0;
 }
 
 .top-bar {
@@ -228,6 +226,8 @@ body {
   .intro {
     height: 100dvh;
     width: 100%;
+    margin-bottom: 0;
+    padding: 0;
   }
   .intro-block {
     display: flex;
