--- a/Task III - Personal Portfolio II/portfolio.css
+++ b/Task III - Personal Portfolio II/portfolio.css
@@ -1,6 +1,73 @@
+:root {
+  --background-color-portfolio: #006666;
+  --primary-text-color-portfolio: #2e2e2e;
+  --accent-text-color-portfolio: #b0b0b0;
+}
 .portfolio {
   background-color: #006666;
   width: 100%;
-  height: 100dvh;
   margin: 0;
+  padding: 0;
+}
+
+.container--portfolio {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.title--portfolio {
+  color: var(--primary-text-color-portfolio);
+  font-size: 64px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  margin-top: 50px;
+  margin-bottom: 0;
+}
+
+.subhead--portfolio {
+  color: var(--accent-text-color-portfolio);
+  font-size: 30px;
+  font-weight: 200;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin-top: 5;
+  margin-bottom: 140px;
+}
+
+.projects-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  column-gap: 120px;
+  row-gap: 120px;
+}
+.project-block {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  width: 350px;
+  height: 350px;
+  background-color: var(--primary-text-color-portfolio);
+  border-radius: 10px;
+}
+.project-block img {
+  width: 200px;
+  border-radius: 20px;
+}
+.project-title {
+  color: var(--background-color-portfolio);
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-size: 20px;
+}
+.project-description {
+  color: var(--accent-text-color-portfolio);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 13px;
 }
