--- a/Task III - Personal Portfolio II/portfolio.css
+++ b/Task III - Personal Portfolio II/portfolio.css
@@ -1,10 +1,14 @@
 :root {
   --background-color-portfolio: #006666;
+  --primary-title-color-portfolio: #2e2e2e;
   --primary-text-color-portfolio: #2e2e2e;
   --accent-text-color-portfolio: #b0b0b0;
+  /* #b0b0b0
+  #006666
+  #2e2e2e */
 }
 .portfolio {
-  background-color: #006666;
+  background-color: var(--background-color-portfolio);
   width: 100%;
   margin: 0;
   padding: 0;
@@ -20,8 +24,8 @@
 }
 
 .title--portfolio {
-  color: var(--primary-text-color-portfolio);
-  font-size: 64px;
+  color: var(--primary-title-color-portfolio);
+  font-size: 45px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   margin-top: 50px;
@@ -35,14 +39,14 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin-top: 5;
-  margin-bottom: 140px;
+  margin-bottom: 90px;
 }
 
 .projects-container {
   display: grid;
-  grid-template-columns: auto auto auto;
-  column-gap: 120px;
-  row-gap: 120px;
+  grid-template-columns: 1fr;
+  gap: 120px 120px;
+  margin-bottom: 100px;
 }
 .project-block {
   display: flex;
@@ -51,23 +55,63 @@
   justify-content: center;
   align-items: center;
   width: 350px;
-  height: 350px;
+  height: 450px;
   background-color: var(--primary-text-color-portfolio);
   border-radius: 10px;
 }
 .project-block img {
-  width: 200px;
-  border-radius: 20px;
+  width: 300px;
+  box-shadow: 2px 5px 15px 5px;
+  margin-bottom: 10px;
+}
+.tesla-project img,
+.mapty-project img {
+  margin-bottom: 50px;
 }
 .project-title {
   color: var(--background-color-portfolio);
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   font-size: 20px;
+  margin-bottom: 0;
 }
 .project-description {
   color: var(--accent-text-color-portfolio);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 13px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.project-details {
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: end;
+}
+
+/* Large Devices */
+@media only screen and (min-width: 768px) {
+  .projects-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 120px 120px;
+  }
+  .title--portfolio {
+    font-size: 64px;
+  }
+  .subhead--portfolio {
+    color: var(--accent-text-color-portfolio);
+    font-size: 30px;
+    font-weight: 200;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
+    margin-top: 5;
+    margin-bottom: 140px;
+  }
+  .hamburger-menu {
+    display: none;
+  }
 }
