--- a/Task III - Personal Portfolio II/introduction.css
+++ b/Task III - Personal Portfolio II/introduction.css
@@ -10,7 +10,10 @@ body {
   margin: 0;
   padding: 0;
 }
-
+a {
+  text-decoration: none;
+  color: inherit;
+}
 .intro,
 .top {
   background-color: var(--background-color);
