--- a/Task III - Personal Portfolio II/main.css
+++ b/Task III - Personal Portfolio II/main.css
@@ -1,3 +1,16 @@
 html {
   scroll-behavior: smooth;
 }
+.hidden {
+  display: none;
+}
+
+.hidden-section {
+  opacity: 0;
+  transform: translateY(70px);
+  transition: opacity 1s ease-out, transform 1s ease-out;
+}
+.shown-section {
+  opacity: 1;
+  transform: translateY(0);
+}
