--- a/Task III - Personal Portfolio II/introduction.css
+++ b/Task III - Personal Portfolio II/introduction.css
@@ -31,6 +31,11 @@ a {
   height: 64px;
   background-color: var(--background-color);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+  transition: transform 0.3s ease-out;
+}
+.hidden-top-bar {
+  transform: translateY(-100%);
 }
 
 .left-bar {
